	* Added D3D9 Simple Triangle sample.
	* Added D2D Simple Triangle sample.

Direct3D 9
	* Added VertexTextureSampler enumeration.
	* Changed Include.Open to include missing parentStream parameter.
	* Fixed Mesh.ToXFile to handle meshes that don't have materials and effects.
	* Fixed a bug in Sprite.Draw where source rectangle was not taken into account.
	* Fixed a bug that would cause EffectStateManager methods to crash if a null shader or texture was passed to them.
	* Fixed a memory leak in EffectStateManager by making implicit shaders ancillary objects.
		
Direct3D 10
	* Added InputElement.AppendAligned property.
	* Added FromFile to ShaderResourceView.
	* Added int and bool vector setter support to EffectVectorVariable.
	* Changed Include.Open to include missing parentStream parameter.
	* Changed Font.Draw color parameter to Color4 instead of unsigned int.
	* Deprecated InputLayout constructor taking (device, elements, signature) in favor of one taking (device, signature, elements).
	* Reconfigured ShaderBytecode to be a ComObject wrapping ID3D10Blob.
	* Reconfigured ShaderSignature to be a ComObject wrapping ID3D10Blob.
	* Added missing Resource constants.
	* Fixed slice size calculations for 3D textures.
	* Fixed list bug in Mesh.GetAttributeTable.

Direct3D 11
	* Added the UnorderedAccess member to BindFlags.
	* Added InputElement.AppendAligned property.
	* Added the ability to create structured buffer resources.
	* Added missing fields to ShaderResourceViewDescription.
	* Added missing Flag field to DepthStencilViewDescription.
	* Added null checks to OutputMergerWrapper methods.
	* Added int and bool vector setter support to EffectVectorVariable.
	* Deprecated InputLayout constructor taking (device, elements, signature) in favor of one taking (device, signature, elements).
	* Removed the dependence on D3D10 by duplicating ShaderBytecode and friends.
	* Changed Effect construction to take a ShaderBytecode for the source data.
	
XAPO
	* Implemented XAPO.